TAG: assemblyseqload-6-0-3-2
DATE: 03/21/2016
STAFF: lec
CHANGES: 
a) TR12220/ENSEMBL 84/84

TAG: assemblyseqload-6-0-3-1
DATE: 03/03/2016
STAFF: lec
CHANGES: 
a) TR12221/VEGA 64

TAG: assemblyseqload-6-0-2-1
TAG: assemblyseqload-tr12070-1
DATE: 12/02/2015
STAFF: lec
CHANGES: 
a) TR12070/12116/SEQ_RELEASE_DATE

TAG: assemblyseqload-tr12070-BP
DATE: 11/2/2015
STAFF: lec
CHANGES: 
a) branch point tag for TR12070/TR12116/Ensembl 82

TAG: assemblyseqload-6-0-0-1
DATE: 7/23/15
STAFF: pf
CHANGES: postgres conversion release tag

TAG: assemblyseqload-tr11750-MP
DATE: 7/1/15
STAFF: pf
CHANGES: merging tr11750 to trunk

TAG: assemblyseqload-5-2-2-1
DATE: 05/22/2015
STAFF: lec
CHANGE: TR11750
a) assemblyseqload.sh : seqcacheload/seqdescription.csh : obsolete

TAG: assemblyseqload-5-1-9-?
DATE: 10/16/2014
STAFF: lec
CHANGES: TR11683/NCBI 104
a) ncbi_assemblyseqload.config : SEQ_RELEASE_DATA, SEQ_RELEASE_NO

TAG: assemblyseqload-tr11750-1
DATE: 05/22/2015
STAFF: lec
a) assemblyseqload.sh : seqcacheload/seqdescription.csh : obsolete

TAG: assemblyseqload-tr11750-BP
DATE: 04/08/2015
STAFF: kstone

TAG: assemblyseqload-5-2-1-5
TAG: assemblyseqload-5-2-1-4
DATE: 04/02/2015
STAFF: sc
CHANGES: TR11959 NCBI release 105
- SEQ_RELEASE_DATE=2015/02/09
- SEQ_RELEASE_NO="GRCm38.p3"

TAG: assemblyseqload-5-2-1-3
DATE: 01/16/2015
STAFF: sc
CHANGES: TR11890/VEGA 58
a) vega_assemblyseqload.config - updated SEQ_RELEASE_DATE

TAG: assemblyseqload-5-2-1-2
DATE: 12/07/2014
STAFF: sc
CHANGES: TR11872/ENSEMBL 78
a) ensembl_assemblyseqload.config - updated SEQ_RELEASE_DATE

TAG: assemblyseqload-5-2-1-1
DATE: 12/02/2014
STAFF: sc
CHANGES: TR11794/ENSEMBL 76
a) ensembl_assemblyseqload.config - updated SEQ_RELEASE_DATE

>>>>>>> 1.60
TAG: assemblyseqload-5-1-9-1
DATE: 08/11/2014
STAFF: lec
CHANGES: TR11716/VEGA 56
a) vega_ensemblseqload : SEQ_RELEASE_DATA

TAG: assemblyseqload-5-1-6-1
DATE: 01/23/2014
STAFF: lec
CHANGES: TR11555/ensembl 74

TAG: assemblyseqload-5-1-5-2
TAG: assemblyseqload-5-1-5-1