@@ -1,3 +1,10 @@
+TAG: assemblyseqload-6-0-4-1
+DATE: 04/29/2016
+STAFF: lec
+CHANGES: TR12069/postgres cleanup
+1) convert to Git
+2) add "db.setAutoTranslate"
+
 TAG: assemblyseqload-6-0-3-2
 DATE: 03/21/2016
 STAFF: lec
